Add registration field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Reserv</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Registration</h1>
+        <input type="email" name="" id="email"><br/>
+        <input type="password" name="" id="password"><br>
+        <input type="button" value="">
+    </div>
 </body>
 </html>
