Added design of registration

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Reserv</title>
 </head>
 <body>
-    <div>
-        <h1>Registration</h1>
-        <input type="email" name="" id="email"><br/>
-        <input type="password" name="" id="password"><br>
-        <input type="button" value="">
+    <div id="reg">
+        <h1>Реєстрація</h1><br>
+        <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
+        <input type="password" required placeholder="Введіть пароль" name="password" id="pass"><br>
+        <input type="button" id="button" value="Зареєструватися">
     </div>
 </body>
 </html>
