Added font, changed some details

--- a/registration.html
+++ b/registration.html
@@ -7,8 +7,11 @@
     <title>Reserv</title>
 </head>
 <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <div id="reg">
-        <h1>Реєстрація</h1><br>
+        <h1 id="treg">Реєстрація</h1><br>
         <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
         <input type="password" required placeholder="Введіть пароль" name="password" id="pass"><br>
         <input type="button" id="button" value="Зареєструватися">
