--- a/registration.html
+++ b/registration.html
@@ -10,6 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <div id="nav">
+        <h2>
+            <a href="http://">ResTec</a>
+            <a href="http://">Викладач</a>
+            <a href="http://">Студент</a>
+            <a href="http://">Як це працює</a>
+        </h2>
+    </div>
     <div id="reg">
         <h1 id="treg">Реєстрація</h1><br>
         <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
