Added login page

--- a/teacher.html
+++ b/teacher.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +12,10 @@
 <body>
     <header id="nav">
         <h3>
-            <a href="home.html" target="_self">ResTec</a>
-            <a href="teacher.html" target="_self">Викладач</a>
+            <a href="home.html" target="_self">Головна</a>
             <a href="student.html" target="_self">Студент</a>
             <a href="info.html" target="_self">Як це працює</a>
+            <a href="login.html" target="_self">Увійти</a>
         </h3>
     </header>
 </body>
