--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
         </h3>
     </header>
     <div id="reg">
-        <h1 id="treg">Реєстрація</h1><br>
+        <h1 id="treg">Увійти</h1><br>
         <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
         <input type="password" required placeholder="Введіть пароль" name="password" id="pass"><br>
-        <a href="login.html" target="_self">Маєте сторінку?</a><br>
-        <input type="button" id="button" value="Зареєструватися">
+        <a href="registration.html" target="_self">Ще не зареєстровані?</a><br>
+        <input type="button" id="button" value="Увійти">
     </div>
 </body>
 </html>
